# svoydom-crm-bot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.example.yml  docker-compose.yml  pyproject.toml  svoydom-crm-bot.service.example
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py  models.py  schemas.py
app/api/: deps.py
app/api/routes/: leads.py  managers.py
app/bot/: dispatcher.py  handlers.py  notifications.py
app/core/: config.py  database.py
app/services/: assignment.py  export.py  leads.py
app/tasks/: reminders.py
